--- a/index.html
+++ b/index.html
@@ -7,32 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="Daniil Syuzev, Даниил Сюзев, bp0hh9">
   <meta name="description" content="Меня зовут Даниил и я начинающий фронтенд разработчик">
+    <link rel="stylesheet" href="styles.css">
     <title>Daniil Syuzev</title>
 </head>
 <body>
-<img src="PXL_20230331_181432029.PORTRAIT.jpg" alt="Здесь моя фотография" width="200">
-<h1>Даниил Сюзев</h1>
-<p>Я начинающий фронтенд-разработчик и участник сообщества <strong>rs-school</strong></p>
-<p>В свободное время занимаюсь <em>битбоксом, воркаутом</em>, а также осваиваю новые прикольные навыки</p>
-<h3>Список социальный сетей:</h3>
-<p>
-    <a href="https://vk.com/bp0hh9" target="_blank">VK</a>
-</p>
-<h3>Мои хобби:</h3>
-<ul>
-    <li>Битбокс</li>
-    <li>Воркаут</li>
-    <li>Мобильная фотография</li>
-</ul>
+<div class="container">
+<div class="info">
+    <div class="info_img">
+    <img src="PXL_20230331_181432029.PORTRAIT.jpg" alt="Здесь моя фотография" >
+    </div>
+    <div class="info_text">
+        <h1>Даниил Сюзев</h1>
+        <p >Я начинающий фронтенд-разработчик и участник сообщества rs-school</p>
+        <p >В свободное время занимаюсь битбоксом, воркаутом, а также осваиваю новые прикольные навыки</p>
+        <h3>Список социальный сетей:</h3>
+        <a href="https://vk.com/bp0hh9" target="_blank">VK</a>
+    </div>
+</div>
+<div class="card bg-red">
+    <h3>Мои хобби:</h3>
+    <ul class="list">
+        <li>Битбокс</li>
+        <li>Воркаут</li>
+        <li>Мобильная фотография</li>
+    </ul></div>
+<div class="card bg-green">
 <h3>Опыт работы</h3>
-<table>
-    <thead>
-    <tr>
-        <th>Название</th>
-        <th>Должность</th>
-        <th>Год</th>
-    </tr>
-    </thead>
+<table class="table">
+<!--    <thead>-->
+<!--    <tr>-->
+<!--        <th>Название</th>-->
+<!--        <th>Должность</th>-->
+<!--        <th>Год</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
     <tbody>
     <tr>
         <td>Фриланс</td>
@@ -46,23 +54,28 @@
     </tr>
     </tbody>
 </table>
-<h3>Связаться со мной</h3>
-<div>
-    <label for="name">Ваше имя:</label>
-    <input type="text" id="name" placeholder="Введите ваше имя">
-</div>
-<div>
-    <label for="email">Ваш email:</label>
-    <input type="email" id="email" placeholder="Введие ваш email">
-</div>
-<div>
-    <label for="message">Ваше сообщение:</label>
-    <br>
-    <textarea name="" id="message" cols="30" rows="4" placeholder="Введите ваше сорбщение"></textarea>
-</div>
-<div>
-    <input type="submit" value="Отправить">
 </div>
 
+<form action="" class="form">
+    <h3>Связаться со мной</h3>
+    <div class="form_row">
+        <div class="form_group">
+            <label for="name">Ваше имя:</label>
+            <input type="text" id="name" placeholder="Введите ваше имя">
+        </div>
+        <div class="form_group">
+            <label for="email">Ваш email:</label>
+            <input type="email" id="email" placeholder="Введие ваш email">
+        </div>
+    </div>
+    <div class="form_group">
+        <label for="message">Ваше сообщение:</label>
+        <textarea name="" id="message" cols="30" rows="4" placeholder="Введите ваше сорбщение"></textarea>
+    </div>
+    <div >
+        <input class="btn" type="submit" value="Отправить">
+    </div>
+</form>
+</div>
 </body>
 </html>
