--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 <div class="info">
     <div class="info_img">
-    <img src="PXL_20230714_173130213" alt="Здесь моя фотография" >
+    <img src="PXL_20230714_173130213.jpeg" alt="Здесь моя фотография" >
     </div>
     <div class="info_text">
         <h1>Даниил Сюзев</h1>
